# sentinel

./: .clang-format  .gitignore  CMakeLists.txt  ProgramConfig.h.in  helpserwer.cpp  helpserwer.txt  main.cpp  make.pro  pomoc.sql
build_pokaz/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Sentinel.sln  Sentinel.vcxproj  Sentinel.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  test.db
build_pokaz/Debug/: Sentinel.ilk
build_pokaz/Sentinel.dir/Debug/Sentinel.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Sentinel.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
build_pokaz/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
doc/: design.xmi  p3_baza_pomocy.sql
help/: C1-lista_stanow-okno.docx  G1-układ_normalny-okno.docx  I4-przekazanie zmiany.docx
help/1.dziennik_zdarzen/: A1-dziennik.htm
help/1.dziennik_zdarzen/A1-dziennik_pliki/: filelist.xml  image001.emz  image029.emz  image035.emz  image037.emz  image039.emz  image041.emz  image043.emz  image045.emz  image047.emz  image049.emz  image051.emz  image054.emz  image056.emz  image058.emz  image060.emz  image062.emz  image064.emz  image068.emz  image070.emz  image073.emz  image075.emz  image077.emz  image078.emz  image080.emz  image082.emz  image084.emz  image086.emz  image088.emz  image090.emz  image092.emz  image094.emz  image096.emz  image098.emz  image100.emz  image102.emz  image104.emz  image106.emz  image108.emz  image118.emz  (+12 more)
help/1.dziennik_zdarzen_v2/: A1-dziennik.htm
help/2.lista_stanow/: C1-lista_stanow-okno.htm
help/3.przekazanie_zmiany/: I4-przekazanie zmiany.docx
help/4.uklad_normalny/: G1-układ_normalny-okno.htm
help/5.lista ostrzegawcza/: D1-lista_ostrzegawcza-okno.docx
help/6.lista_alarmowa/: A10-lista alrmowa.htm
help/7.okno_mapy/: H10-mapa-okno.htm
help_doc/: A1-dziennik.docx  A10-lista_alrmowa.docx  D1-lista_ostrzegawcza-okno.docx  I4-przekazanie_zmiany.docx
